# celex4_ros

devel/: .catkin  .rosinstall  setup.sh
devel/include/dvs_msgs/: Event.h  EventArray.h  FeatureImu.h
devel/lib/celex4/: cam_pub  cam_pub_gray
devel/lib/pkgconfig/: celex4.pc  dvs_msgs.pc
devel/lib/python2.7/dist-packages/dvs_msgs/msg/: _Event.py  _EventArray.py  _FeatureImu.py  __init__.py
devel/share/celex4/cmake/: celex4Config.cmake
devel/share/common-lisp/ros/dvs_msgs/msg/: Event.lisp  EventArray.lisp  FeatureImu.lisp  _package.lisp  _package_Event.lisp  _package_EventArray.lisp  _package_FeatureImu.lisp  dvs_msgs-msg.asd
devel/share/dvs_msgs/cmake/: dvs_msgs-msg-extras.cmake  dvs_msgs-msg-paths.cmake  dvs_msgsConfig.cmake
devel/share/gennodejs/ros/dvs_msgs/msg/: Event.js  EventArray.js  FeatureImu.js  _index.js
devel/share/roseus/ros/dvs_msgs/: manifest.l
devel/share/roseus/ros/dvs_msgs/msg/: Event.l  EventArray.l  FeatureImu.l
src/celex4/: CMakeLists.txt  package.xml
src/celex4/config/: FPN.txt
src/celex4/include/base/: dataqueue.cpp  dataqueue.h  hhconstants.h  xbase.cpp
src/celex4/include/celex4/: celex4.h
src/celex4/include/configproc/: hhsequencemgr.cpp  hhwireincommand.cpp  hhxmlreader.cpp
src/celex4/include/eventproc/: celex4.cpp  celex4processeddata.cpp  dataprocessthread.cpp  dataprocessthread.h  eventprocessing.cpp  fpgadataprocessor.cpp  fpgadataprocessor.h  fpgadatareader.cpp  fpgadatareader.h
src/celex4/include/frontpanel/: frontpanel.cpp
src/celex4/lib/: FPN.txt  libudev.so.0
src/celex4/src/: cam_pub.cpp  cam_pub_gray.cpp
src/dvs_msgs/: CMakeLists.txt  bag.py  create.py  play.py  viewimg.py
src/dvs_msgs/msg/: EventArray.msg  FeatureImu.msg
